crates/client/src/common/snapshots/snapshot_test_algorithm_info.snap
---
source: crates/client-common/src/deserialized_responses.rs
expression: info
---
{
  "MegolmV1AesSha2": {
    "curve25519_key": "curvecurvecurve",
    "sender_claimed_keys": {
      "curve25519": "claimedclaimedcurve25519",
      "ed25519": "claimedclaimeded25519"
    }
  }
}
