crates/client/src/common/snapshots/snapshot_test_shield_codes-2.snap
---
source: crates/client-common/src/deserialized_responses.rs
expression: "ShieldStateCode::UnknownDevice"
---
"UnknownDevice"
