crates/client/src/common/snapshots/snapshot_test_shield_codes-4.snap
---
source: crates/client-common/src/deserialized_responses.rs
expression: "ShieldStateCode::UnverifiedIdentity"
---
"UnverifiedIdentity"
