crates/client/src/common/snapshots/snapshot_test_shield_states-2.snap
---
source: crates/client-common/src/deserialized_responses.rs
expression: "ShieldState::Red\n{ code: ShieldStateCode::UnverifiedIdentity, message: \"a message\" }"
---
{
  "Red": {
    "code": "UnverifiedIdentity",
    "message": "a message"
  }
}
