crates/client/src/common/snapshots/snapshot_test_verification_level-2.snap
---
source: crates/client-common/src/deserialized_responses.rs
expression: "VerificationLevel::UnsignedDevice"
---
"UnsignedDevice"
