crates/client/src/common/snapshots/snapshot_test_verification_level-4.snap
---
source: crates/client-common/src/deserialized_responses.rs
expression: "VerificationLevel::None(DeviceLinkProblem::MissingDevice)"
---
{
  "None": "MissingDevice"
}
