crates/client/src/common/snapshots/snapshot_test_verification_states-4.snap
---
source: crates/client-common/src/deserialized_responses.rs
expression: "VerificationState::Unverified(VerificationLevel::None(DeviceLinkProblem::MissingDevice,))"
---
{
  "Unverified": {
    "None": "MissingDevice"
  }
}
